<resources>
    <string name="app_name">Dulce Tradición - Tienda de dulces</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dulce Tradición</string>
    <string name="nav_header_subtitle">dulce_tradicion@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Inventario</string>
    <string name="menu_slideshow">Contacto</string>

    <string name="nosotros_desc">En Dulce Tradición, endulzamos tus momentos con los sabores más deliciosos y auténticos. Somos una tienda especializada en dulces tradicionales y modernos, donde cada bocado es una explosión de felicidad. Ubicados en Av. Chapultepec 245, Colonia Americana, Guadalajara, nuestro objetivo es traer a tu mesa una amplia variedad de golosinas que combinan lo mejor de las recetas clásicas con las creaciones más innovadoras.\n\n
Desde caramelos y chocolates artesanales, hasta gomitas, mazapanes, y dulces típicos mexicanos, en Dulce Tradición tenemos algo para satisfacer cada antojo. Nos enorgullece ofrecer productos de alta calidad, preparados con ingredientes selectos y mucho amor, para que cada cliente disfrute de una experiencia dulce y única.\n\n
Ya sea que busques revivir los sabores de tu infancia o quieras descubrir nuevos placeres, te invitamos a visitarnos y disfrutar de nuestro colorido mundo de dulces. En Dulce Tradición, la dulzura nunca pasa de moda, y cada día es una oportunidad para sonreír y compartir momentos especiales con los que más quieres.</string>

    <!-- Valores texto propios -->
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ing_usuario">Ingresar Usuario</string>
    <string name="ing_contra">Ingresar Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="agregar">Agregar a carrito</string>
    <string name="titulo">Tienda de dulces</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>


    <!-- Dulces -->
    <string name="dulce01">Mazapán de Cacahuate</string>
    <string name="dulce02">Ate de Guayaba</string>
    <string name="dulce03">Cocadas </string>
    <string name="dulce04">Paletas de Tamarindo</string>
    <string name="dulce05">Alegrías de Amaranto</string>
    <string name="articulo">Articulo</string>
    <string name="carrito">Carrito</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="menu_carrito">Carrito de compras</string>
    <string name="eliminar_carrito">Eliminar carrito</string>

</resources>